k8s/bank-web-ui/bank-a-agent.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: bank-a-agent
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: bank-agent
    protocol: TCP
  selector:
    app: bank-a-agent
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: bank-a-agent
  annotations:
    enki.services/git-version: "${BANK_UI_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: bank-a-agent
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bank-a-agent
    spec:
      containers:
      - name: bank-agent
        image: ${REGISTRY}enki/agent:${AGENT_VERSION}
        command: ["sh", "-xc", "cd /data/agent && /srv/run.sh"]
        volumeMounts:
          - name: efs-pvc
            # "$HOME"
            mountPath: "/data/agent"
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3010
        ports:
        - name: bank-agent
          containerPort: 3010
        resources:
          requests:
            memory: "192Mi"
          limits:
            memory: "256Mi"
      restartPolicy: Always
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: bank-a-agent-store
