k8s/bank-web-ui/bank-ui-a.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bank-a-ui-ns
spec:
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: bank-a-web-ui
  annotations:
    enki.services/git-version: "${BANK_UI_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: bank-a-ui-ns
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bank-a-web-ui
    spec:
      containers:
      - name: bank-a-web-ui
        image: ${REGISTRY}enki/bank-a-web-ui:${BANK_UI_VERSION}
        readinessProbe:
          httpGet:
            path: /builds/build-manifest.json # Not used elsewhere, but we use it here as it's a non-hashed name
            port: 80
        ports:
        - name: bank-a-web-ui
          containerPort: 80
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        volumeMounts:
          - name: efs-pvc
            mountPath: "/enki-bank-web-ui/server/db"
      restartPolicy: Always
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: bank-a-ui-store
---
kind: Service
apiVersion: v1
metadata:
  name: bank-a-web-ui
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: bank-a-web-ui
    protocol: TCP
  selector:
    app: bank-a-web-ui
