k8s/bank-web-ui/consus-keyserver.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: keyserver
spec:
  type: ClusterIP
  ports:
  - name: keyserver
    port: 8070
    targetPort: 8070
    protocol: TCP
  selector:
    app: consus-keyserver
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: consus-keyserver
  annotations:
    enki.services/git-version: "${CONSUS_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: keyserver
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: consus-keyserver
    spec:
      containers:
      - name: keyserver
        image: ${REGISTRY}enki/upspin-keyserver:${CONSUS_VERSION}
        readinessProbe:
          tcpSocket:
            port: keyserver
        ports:
        - name: keyserver
          containerPort: 8070
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "96Mi"
        volumeMounts:
          - name: efs-pvc
            mountPath: "/root"
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: consus-keyserver-store
