k8s/bank-web-ui/consus-upspinserver.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: upspinserver
spec:
  type: ClusterIP
  ports:
  - name: upspinserver
    port: 8090
    targetPort: 8090
    protocol: TCP
  selector:
    app: consus-upspinserver
---
## TODO: We are terrible peep.
kind: Service
apiVersion: v1
metadata:
  name: consus-upspinserver
spec:
  type: ClusterIP
  ports:
  - name: consus-upspinserver
    port: 8090
    targetPort: 8090
    protocol: TCP
  selector:
    app: consus-upspinserver
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: consus-upspinserver
  annotations:
    enki.services/git-version: "${CONSUS_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: upspinserver
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: consus-upspinserver
    spec:
      containers:
      - name: upspinserver
        image: ${REGISTRY}enki/upspin-server:${CONSUS_VERSION}
        readinessProbe:
          tcpSocket:
            port: upspinserver
        ports:
        - name: upspinserver
          containerPort: 8090
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "96Mi"
        volumeMounts:
          - name: efs-pvc
            # "$HOME"
            mountPath: "/root"
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: consus-upspinserver-store
