k8s/bank-web-ui/hydra-a.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bank-a-hydra
  annotations:
    enki.services/git-version: "${HYDRA_SETUP_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: bank-a-hydra
    spec:
      containers:
      - name: bank-a-hydra
        image: oryd/hydra:v0.9.16-without-telemetry
        command:
          - /go/bin/hydra
          - host
          - --dangerous-force-http
        readinessProbe:
          httpGet:
            path: /health
            port: 4444
        ports:
        - name: bank-a-hydra
          containerPort: 4444
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "96Mi"
      - name: hydra-setup
        image: ${REGISTRY}enki/hydra-setup-bank:${HYDRA_SETUP_VERSION}
        # Pause indefinitely once done.
        command:
          - bash
          - -xce
          - |
              /srv/configure-bank-hydra.sh
              /srv/setup-readiness-check.sh
        readinessProbe:
          httpGet:
            path: /
            port: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: bank-a-hydra
spec:
  selector:
    app: bank-a-hydra
  type: NodePort
  ports:
  - name: hydra-a-http
    port: 80
    targetPort: 4444
    protocol: TCP
