k8s/bank-web-ui/postgres-b.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg-bank-b-ns
spec:
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: pg-bank-b
  annotations:
    enki.services/git-version: "${BANK_UI_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: pg-bank-b-ns
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pg-bank-b
    spec:
      containers:
      - name: postgres
        image: ${REGISTRY}enki/postgres:${POSTGRES_VERSION}
        readinessProbe:
          exec:
            command: ['sh', '-c', 'pg_isready -U postgres -h $(hostname -f)']
        livenessProbe:
          exec:
            command: ['sh', '-c', 'pg_isready -U postgres -h $(hostname -f)']
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        volumeMounts:
          - name: efs-pvc
            mountPath: "/data/postgresql"
      restartPolicy: Always
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: pg-bank-b-store
---
apiVersion: v1
kind: Service
metadata:
  name: pg-bank-b
  labels:
    app: pg-bank-b
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg-bank-b
